fix go-to-cta alignment

--- a/meal-ui/src/styles/local/partials/1-elements/go-to-cta.scss
+++ b/meal-ui/src/styles/local/partials/1-elements/go-to-cta.scss
@@ -5,7 +5,7 @@ label.goto-cta {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items: baseline;
+	align-items: center;
 	border-radius: 12px;
 
 	&,
